# advent-of-code

./: .gitignore  .pre-commit-config.yaml  01.py  02.py  03.py  04.py  05.py  06.py  07.py  08.py  08_marek.py  09.py  10.py  11.py  12.py  13.py  14.py  15.py  16.py  18.py  19.py  20.py  21.py  22.py  23.py  23_animated.ipynb  24.py  25.py  README.md  TODO.md  aoc_token.txt  conda_env.yml  pyproject.toml  requirements.txt  setup.cfg  start_day.sh  starter.sh  template.py  wrapper.py
.devcontainer/: Dockerfile  devcontainer.json
advent_of_code/: wrapper.py
code_2024/: 01.py
