[tool.poetry]
name = "advent-of-code"
version = "0.2023"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^1.26.2"
pandas = "^2.1.3"
requests = "^2.31.0"

[tool.poetry.group.dev.dependencies]
pre-commit = "^3.5.0"
ipython = "^8.18.1"
ruff = "^0.1.9"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
# defaults from https://docs.astral.sh/ruff/configuration/
extend-exclude = ["__pycache__"]
line-length = 120
target-version = "py310"

[tool.ruff.lint]
# Enable Pyflakes (`F`) and a subset of the pycodestyle (`E`)  codes by default.
# Unlike Flake8, Ruff doesn't enable pycodestyle warnings (`W`) or
# McCabe complexity (`C901`) by default.
select = ["E", "F", "I"]
ignore = []

[tool.ruff.format]
