[tool.poetry]
name = "advent-of-code"
version = "0.2024"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{ include = "advent_of_code" }]

[tool.poetry.dependencies]
python = "^3.12"
requests = "^2.32.3"
pandas = "^2.2.3"

[tool.poetry.group.dev.dependencies]
pre-commit = "^4.0.1"
ipython = "^8.30.0"
ruff = "^0.8.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
# defaults from https://docs.astral.sh/ruff/configuration/
extend-exclude = ["__pycache__"]
line-length = 120
target-version = "py312"

[tool.ruff.lint]
# Enable Pyflakes (`F`) and a subset of the pycodestyle (`E`)  codes by default.
# Unlike Flake8, Ruff doesn't enable pycodestyle warnings (`W`) or
# McCabe complexity (`C901`) by default.
select = ["E", "F", "I"]
ignore = []

[tool.ruff.format]
